<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_namechange">PforR khảo sát</string>
    <string name="xacnhanguitrung">Bạn có chắc chắn gửi thông tin trùng địa chỉ !</string>
    <string name="dialogloc">Bạn chưa có dữ liệu !</string>
    <string name="banchuachontrung">Bạn chưa chọn bản ghi !</string>
    <string name="trungthanhcong">Cập nhật thành công !</string>
    <string name="message">Đang cập nhật dữ liệu.Vui lòng chờ trong giây lát !</string>
    <string name="message_login">Đang xác nhận tài khoản !</string>
    <string name="message_xacnhan">Đang xác nhận đường dẫn.Vui lòng chờ trong giây lát !</string>
    <string name="ttieude_vesinh">Kế Hoạch Kiểm Đếm Vệ Sinh</string>
    <string name="loinetwork">Không có kết nối mạng</string>
    <string name="vesinh_ctrinh">Vệ sinh công cộng</string>
    <string name="vesinh">Vệ sinh hộ gia đình</string>
    <string name="kehoachnuoc">Kế hoạch đấu nối nước</string>
    <string name="thanhcong">Cập Nhật Thành Công</string>
    <string name="thanhcongthaydoi">Thay Đổi Thành Công</string>
    <string name="thongtintrungsery">Thông tin bị trùng số sery</string>
    <string name="thongtintrungdiachi">Thông tin bị trùng địa chỉ</string>
    <string name="xoasery">Xóa thông tin trùng sery</string>
    <string name="chitiet">: thông tin bị trùng >></string>
    <string name="timten">nhập tên tìm kiếm</string>
    <string name="loitaikhoan">Tài Khoản không Đúng</string>
    <string name="menu">Menu tìm kiếm</string>
    <string name="menuloc">Lọc theo thôn/xóm</string>
    <string name="Thongtindulieu">Thông tin dữ liệu</string>
    <string name="daunoinuocthongtin">Đầu nối nước</string>
    <string name="thongtintongdaunoi">Tổng số đầu nối :</string>
    <string name="thongtintonghogd">Tổng số hộ gia đình :</string>
    <string name="thongtintongcongtrinh">Tổng số công trình :</string>
    <string name="vesinhgiadinhthongtin">Vệ sinh gia đình</string>
    <string name="congtrinhcongcongthongtin">Công trình công cộng</string>
    <string name="mssxoasery">Bạn có chắc chắn xóa thông tin trùng sery !</string>
    <string name="mssxoadulieu">Bạn có chắc chắn xóa toàn bộ dữ liệu!</string>
    <string name="xacnhanthongtin">Xác nhận thông tin</string>
    <string name="app_name">Khảo sát</string>
    <string name="tongguinuoc">Số đầu nối cập nhật thành công :</string>
    <string name="tongguivs">Số hộ cập nhật thành công:</string>
    <string name="tongguict">Số công trình cập nhật thành công :</string>
    <string name="delete">delete</string>
    <string name="add">add</string>
    <string name="xoadulieu">Xóa dữ liệu</string>
    <string name="ok">Đồng ý</string>
    <string name="huy">Hủy</string>
    <string name="guidulieu">Gửi dữ liệu</string>
    <string name="dl_ok">Đông ý</string>
    <string name="sort">Sắp xếp</string>
    <string name="timkiem">Tìm kiếm</string>
    <string name="sapxep">Sắp xếp</string>
    <string name="cancel">Hủy</string>
    <string name="set">Set</string>
    <string name="xaxis">X-Axis</string>
    <string name="yaxis">Y-Axis</string>
    <string name="button_search">Search</string>
    <string name="element_key">Element Key</string>
    <string name="element_name">Element Name</string>
    <string name="column_type">Column Type</string>
    <string name="add_color_rule">Add Color Rule</string>
    <string name="delete_changes_to_color_rules">Delete Changes to Color Rules</string>
    <string name="column_width">Column Width</string>
    <string name="cannot_add_color_rule">Cannot Add Color Rule</string>
    <string name="cannot_revert_color_rules">Cannot Revert Color Rules</string>
    <string name="no_color_rules">No Color Rules</string>
    <string name="edit_color_rules">Edit Color Rules</string>
    <string name="box_stem_settings_title">Box-Stem Graph Settings</string>
    <string name="impossible_box_stem">At least one number column is required for box-stem graphs.</string>
    <string name="table_files_authority">org.opendatakit.tables.tablefilesauthority</string>
    <string name="user_defined_listview_name_label">Name</string>
    <string name="file">File</string>
    <string name="no_table_message">Use + submenu to add a new table</string>
    <string name="no_list_view_message">Use + submenu to add a new list view</string>
    <string name="user_defined_graphview_name_label">Name</string>
    <string name="app_defined_graphtype_label">Graph Type</string>
    <string name="name_of_new_table">Name of New Table</string>
    <string name="export">Export</string>
    <string name="sync">Cập nhật dữ liệu</string>
    <string name="reset">Xóa dữ liệu</string>
    <string name="next">Trở lại</string>
    <string name="logout">Thoát</string>
    <string name="preferences">Về trang chính</string>
    <string name="color_rule_for_map">Color Rule for Map</string>
    <string name="comparison_type">Comparison Type</string>
    <string name="value">Value</string>
    <string name="text_color">Text Color</string>
    <string name="background_color">Background Color</string>
    <string name="column">Column</string>
    <string name="sync_state_equals_synced_message">Was up to date after last sync.</string>
    <string name="sync_state_equals_synced_pending_files_message">Files need to be synced.</string>
    <string name="sync_state_equals_new_row_message">Has never been synced.</string>
    <string name="sync_state_equals_deleted_message">Will be deleted during sync.</string>
    <string name="sync_state_equals_in_conflict_message">Conflicts with server version.</string>
    <string name="sync_state_equals_changed_message">New changes will be uploaded.</string>
    <string name="sync_result">Sync Results</string>
    <string name="file_picker_not_found">OI File Manager is missing.\n\nPlease install the OI File Manager application.</string>
    <string name="no_shortcuts">No Shortcuts Defined</string>
    <string name="account">Account:</string>
    <string name="save_settings">Save settings</string>
    <string name="auth_account">Authorize account</string>
    <string name="choose_sync_set">Choose set of tables to sync</string>
    <string name="download_table">Download table from server</string>
    <string name="sync_now">Sync now</string>
    <string name="sync_now_push">Reset App Server</string>
    <string name="sync_now_pull">Sync now</string>
    <string name="sync_files_now">Sync files now</string>
    <string name="server_url">Aggregate URL:</string>
    <string name="default_server_url">http://opendatakit-2.appspot.com</string>
    <string name="save_all">Save All</string>
    <string name="tiep">trở lại</string>
    <string name="previous">Previous</string>
    <string name="save">Save</string>
    <string name="list_format">List Format</string>
    <string name="sync_no_tables_ready">There are no tables ready to be synched with the server.</string>
    <string name="press_to_add_color_rule">Press + to add a color rule</string>
    <string name="press_to_add_graph">Press + to add a graph.</string>
    <string name="list_view_settings">List View Settings</string>
    <string name="press_to_add_list_view">Press + to add a list view.</string>
    <string name="open_new_spreadsheet">Open New Spreadsheet File</string>
    <string name="no_data">No data</string>
    <string name="no_matching_rows">No rows found.</string>
    <string name="edit">Edit</string>
    <string name="write_access_control_group">Write Access Control Group:</string>
    <string name="read_access_control_group">Read Access Control Group:</string>
    <string name="select_view">Chọn kiểu hiển thị</string>
    <string name="chonloc">Lọc theo thôn/xóm</string>
    <string name="timtheoten">Tìm theo tên</string>
    <string name="loc">Tìm theo</string>
    <string name="chonlocnuoc">Đầu nối nước</string>
    <string name="chonlocgiadinh">Vệ sinh gia đình</string>
    <string name="chonloccongcong">Vệ sinh công cộng</string>
    <string name="find">Lọc theo trạng thái</string>
    <string name="all">Tất cả dữ liệu</string>
    <string name="spreadsheet">Danh sách excel</string>
    <string name="error_while_changing_group_by_columns">Error while changing group by columns</string>
    <string name="error_while_changing_sort_column">Error while changing sort column</string>
    <string name="error_while_changing_index_column">Error while changing index column</string>
    <string name="list">Danh sách</string>
    <string name="graph">Graph</string>
    <string name="map">Danh sách bản đồ</string>
    <string name="preferred_view_type">Preferred View Type</string>
    <string name="sms_shortcut_name">Shortcut Name</string>
    <string name="sms_shortcut_input">Shortcut Input</string>
    <string name="sms_shortcut_output">Shortcut Output</string>
    <string name="multiple_choice_options">Multiple Choice Options</string>
    <string name="add_choice">Add Choice</string>
    <string name="no_conflicts">No conflicts.</string>
    <string name="undo">Undo</string>
    <string name="add_rule">Add Rule</string>
    <string name="conditional_colors">Conditional Colors: %1$s</string>
    <string name="pick_foreground_color">Pick a Foreground Color</string>
    <string name="pick_background_color">Pick a Background Color</string>
    <string name="unrecognized_rule">Unrecognized Rule</string>
    <string name="accepted_rule_ops">The accepted operators are: &lt;, &lt;=, =, &gt;, &gt;=</string>
    <string name="sunday_abbrev">SUN</string>
    <string name="monday_abbrev">MON</string>
    <string name="tuesday_abbrev">TUE</string>
    <string name="wednesday_abbrev">WED</string>
    <string name="thursday_abbrev">THU</string>
    <string name="friday_abbrev">FRI</string>
    <string name="saturday_abbrev">SAT</string>
    <string name="black">Black</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="title_form_id">Form Id</string>
    <string name="title_root_element">Root Element</string>
    <string name="configuring_tables">Đang cấu hình hệ thống</string>
    <string name="processing_file">processing file&#8230;</string>
    <string name="expansion_unzipping_begins">Unzipping resources. Scanning zip directory.</string>
    <string name="expansion_unzipping_without_detail">Unzipping resources. Extracting %1$s (%2$d of %3$d)</string>
    <string name="expansion_create_dir_detail">Creating directory</string>
    <string name="expansion_unzipping_detail">at byte %1$d out of %2$d overall</string>
    <string name="expansion_unzipping_complete">Unzipping resources completed.</string>
    <string name="scanning_for_table_definitions">Scanning for table definitions. Creating %1$s (%2$d of %3$d).</string>
    <string name="importing_file_without_detail">Importing file (%1$d of %2$d): %3$s</string>
    <string name="add_row">Thêm dữ liệu mới </string>
    <string name="taikhoanh">Nhập Tên Tài Khoản</string>
    <string name="duongdan">Đường link web</string>
    <string name="thaydoi">Thay đổi</string>
    <string name="trolai">Trở lại</string>
    <string name="matkhauh">Nhập Mật khẩu</string>
    <string name="tt_nuoc_tu">Từ :</string>
    <string name="tt_nuoc_den">- > Đến :</string>
    <string name="tt_nuoc_tt">Trạng thái</string>
    <string name="tt_nuoc_thuchien">Đang thực hiện</string>
    <string name="tt_nuoc_tong">Tổng số đầu nối </string>
    <string name="tt_nuoc_chuakd">Chưa kiểm đếm </string>
    <string name="tt_nuoc_ht">Đã hoàn thành </string>
    <string name="tt_nuoc_chuaht">Chưa hoàn thành </string>
    <string name="taikhoan">Tài khoản :</string>
    <string name="showpass">Hiện mật khẩu</string>
    <string name="vesion">Phiên bản : </string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="matkhau">Mật khẩu :</string>
</resources>