<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- Add a row -->
    <item
        android:id="@+id/top_level_table_menu_add"
        android:icon="@drawable/icon_add"
        android:showAsAction="always"
        android:title="@string/add_row"/>

    <!-- Select a view -->
    <!-- android:icon="@drawable/ic_action_view_as_list" -->
    <item
        android:id="@+id/top_level_table_menu_select_view"
        android:icon="@drawable/icon_view"
        android:showAsAction="always"
        android:title="@string/select_view">

        <!-- View submenu -->
        <menu>
            <group android:checkableBehavior="single" >
                <item
                    android:id="@+id/top_level_table_menu_view_spreadsheet_view"
                    android:title="@string/spreadsheet"/>
                <item
                    android:id="@+id/top_level_table_menu_view_list_view"
                    android:title="@string/list"/>
                <item
                    android:id="@+id/top_level_table_menu_view_map_view"
                    android:title="@string/map"/>
            </group>
        </menu>
    </item>
    <!-- Select a loc -->

    <item
        android:id="@+id/top_level_table_menu_select_loc"
        android:icon="@drawable/icon_timkiem"
        android:showAsAction="always"
        android:title="@string/chonloc">

        <!-- View submenu -->
        <menu>
            <item
                android:id="@+id/top_level_table_menu_all"
                android:title="@string/all"/>
            <item
                android:id="@+id/top_level_table_menu_timkiem"
                android:title="@string/find"/>
            <item
                android:id="@+id/top_level_table_menu_loctimkiem"
                android:showAsAction="always"
                android:title="@string/chonloc">
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/top_level_table_menu_sapxep"
        android:icon="@drawable/icon_loc"
        android:showAsAction="always"
        android:title="@string/sort">
    </item>
    <item
        android:id="@+id/top_level_table_menu_table_home"
        android:icon="@drawable/icon_homet"
        android:showAsAction="always"
        android:title="@string/preferences"/>

</menu>